git ignore for production

--- a/docker-compose.service.yml
+++ b/docker-compose.service.yml
@@ -48,7 +48,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /mnt/sdc/rabbitmq
+      device: /opt/rabbitmq
       o: bind
 
 networks:
