--- a/docker-compose.service.yml
+++ b/docker-compose.service.yml
@@ -23,6 +23,7 @@ services:
     container_name: postgres_db
     environment:
       POSTGRES_PASSWORD: "JPmb@3q1b31mV21FmCx"
+      POSTGRES_DB: strategy_manager
     ports:
       - '5432:5432'
     volumes:
@@ -35,7 +36,7 @@ services:
     image: dpage/pgadmin4
     restart: always
     environment:
-      PGADMIN_DEFAULT_PASSWORD: 'Ali.137778'
+      PGADMIN_DEFAULT_PASSWORD: '3q1b31mV21FmCx'
       PGADMIN_DEFAULT_EMAIL: 'lirezazadeh77@gmail.com'
     volumes:
       - './pgadmin4:/pgadmin4'
